ADD: 删除区域信息
